project(cpp_with_algorithm)

add_executable(3274
leetcode/simulation/3274.cpp
)

add_executable(quick_sort
src/sort/quick_sort.cpp
)

add_executable(merge_sort
src/sort/merge_sort.cpp
)

add_executable(LCR077
leetcode/linked_list/LCR077.cpp
leetcode/linked_list/linkedlist.cpp
)

add_executable(LCR026
leetcode/linked_list/LCR026.cpp
leetcode/linked_list/linkedlist.cpp
)

add_executable(1847
leetcode/binary_search/1847.cpp
)

