cmake_minimum_required(VERSION 3.10.0)
project(cpp_with_algorithm)

add_executable(3274
leetcode/simulation/3274.cpp
)

add_executable(quick_sort
src/sort/quick_sort.cpp
)

add_executable(merge_sort
src/sort/merge_sort.cpp
)

add_executable(LCR077
leetcode/linked_list/LCR077.cpp
leetcode/linked_list/linkedlist.cpp
)

add_executable(LCR026
leetcode/linked_list/LCR026.cpp
leetcode/linked_list/linkedlist.cpp
)

add_executable(1847
leetcode/binary_search/1847.cpp
)

add_executable(binary_tree
leetcode/binary_tree/binarytree.cpp 
leetcode/binary_tree/main.cpp
)

add_executable(bubble_sort
src/sort/bubble_sort.cpp
)

add_executable(1705
leetcode/priority_queue/1705.cpp
)

add_executable(49
leetcode/string/49.cpp
)

add_executable(729
leetcode/set/729.cpp
)

add_executable(min_heap_test
src/heap/min_heap_test.cpp src/heap/min_heap_array_impl.cpp
)


